<resources>
    <string name="app_name">Telikom</string>
    <string name="prefix">+675</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="add_mobile_number">Add Mobile Number</string>
    <string name="add">Add</string>
    <string name="delete_mobile_number">Delete Mobile Number</string>
    <string name="delete">Delete</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us_description">"If you wish to speak to a customer care agent call 1555 and if you want to know more about us or our products, visit us on "</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="e_mail">E-mail :</string>
    <string name="subscription_number">Subscription Number :</string>
    <string name="send_verfication_code">Send Verification Code</string>
    <string name="email">Email</string>
    <string name="send_otp">Send otp</string>
    <string name="enter_otp">Enter OTP :</string>
    <string name="note_maximum_number_of_attempts_allowed_is_5">Note: Maximum number of attempts allowed is 5</string>
    <string name="validity_of_otp_5mins">Validity of OTP: 5 mins</string>
    <string name="submit">Submit</string>
    <string name="accept_terms">By registering you have agreed to the Terms &amp; Conditions</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="my_plans">My plans</string>
    <string name="mobile_number_i">"Mobile Number : "</string>
    <string name="quick_links">Quick links</string>
    <string name="my_account">My account</string>
    <string name="store_locator">Store locator</string>
    <string name="products">Products</string>
    <string name="specials">Specials</string>
    <string name="registration">Registration</string>
    <string name="first_name">"First Name "</string>
    <string name="last_name">Last Name</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="sim_activation">SIM Activation</string>
    <string name="puk1_number">Puk1 Number</string>
    <string name="sim_number">SIM Number</string>
    <string name="activate">Activate</string>
    <string name="topup_your_account">Topup your Account</string>
    <string name="amount_in_sbd">Amount(in SBD)</string>
    <string name="pay">Pay</string>
    <string name="planname">Planname</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="buy">Buy</string>
    <string name="k80_data_bundle">K80 data bundle</string>
    <string name="expires_on_04062009">Expires on 04062009</string>
    <string name="voice">Voice</string>
    <string name="_15">15%</string>
    <string name="attention">Attention</string>
    <string name="pick_qty">Pick Qty</string>
    <string name="ok">OK</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to Logout?</string>
    <string name="menu">Menu</string>
    <string name="quicklinks">Quick links</string>
    <string name="topup">TopUp</string>
    <string name="plans">Plans</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="loading">Loading</string>
    <string name="old_password_error">Old Password should not be empty</string>
    <string name="new_password_error">New Password should not be empty</string>
    <string name="new_password_error_set_password">Please enter the new password</string>
    <string name="confirm_password_error_set_password">Please enter the confirm password</string>
    <string name="retype_password_error">Retype Password should not be empty</string>
    <string name="new_password_error_length_validation">Password must be between 8 and 12 characters with combination of atleast one uppercase, lowercase, digit and special character</string>
    <string name="new_password_and_retype_password_not_equal">Could not match your new password</string>
    <string name="space_not_allowed">Could not allow space</string>
    <string name="mobile_number_empty_error">Please enter the mobile number</string>
    <string name="puk1Number_empty_error">Please enter the puk1 number</string>
    <string name="simNumber_empty_error">Please enter the sim number</string>
    <string name="mobile_number_length_error">Please enter the valid mobile number</string>
    <string name="puk1Number_length_error">Please enter the valid puk1 number</string>
    <string name="simNumber_length_error">Please enter the valid sim number</string>
    <string name="credit_balance">Credit Balance</string>
    <string name="credit_balance_expiry">Credit Balance Expiry</string>
    <string name="data_balance">Data Balance</string>
    <string name="data">Data</string>
    <string name="sms_balance">SMS Balance</string>
    <string name="voice_balance">Voice Balance</string>
    <string name="roaming_data">Roaming Data</string>
    <string name="roaming_sms">Roaming SMS</string>
    <string name="roaming_voice">Roaming Voice</string>
    <string name="dokuTest">test</string>

    <string name="cancel">Cancel</string>
    <string name="my_dashboard">My dashboard</string>
    <string name="my_plan">My plan</string>
    <string name="topup_dash">Topup</string>
    <string name="sim_activation_dash">SIM Activation</string>
    <string name="add_mobile_number_dash">Add mobile number</string>
    <string name="contact_us_dash">Contact us</string>
    <string name="verification_code">Verification Code</string>
    <string name="left">left</string>
    <string name="idd">IDD</string>
    <string name="sms">SMS</string>
    <string name="you_do_not_have_active_plans">You do not have active plans</string>
    <string name="min_sbd_5_max_sbd_500">Min: SBD 5 Max: SBD 500</string>
    <string name="network_type">Network Type</string>
    <string name="update_profile">Update Profile</string>
    <string name="loan_me">Loan Me</string>
    <string name="loan_me_amount">Loan me Amount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="voucher">Voucher</string>
    <string name="amount_in_kina">Amount(in Kina)</string>
    <string name="bsp_credit_card">BSP Credit Card</string>
    <string name="bsp_pay">BSP Pay</string>


    <string name="my_insights">My Insights</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="monthly_spending_kina">Monthly spending (Kina)</string>
    <string name="_675_770_66066">675-770-66066</string>

    <string name="click_here_to_know_more_about_bsp_pay">&lt;a href=https://selfcare.bmobile.com.pg/images/BSP_Pay_about.jpg&gt;Click here to know more about BSP PAY&lt;/a&gt;</string>
    <string name="voucher_number">Voucher Number</string>
    <string name="credit_transfer">Credit Transfer</string>
    <string name="get_pawa">Get pawa</string>
    <string name="nambawan_super_nbalance">Nambawan super\nbalance</string>
    <string name="nasfund_balance">Nasfund balance</string>
    <string name="transfer_to_others">Transfer to Others</string>
    <string name="from_number">From Number :</string>
    <string name="balance">Balance :</string>
    <string name="_45_00">45.00</string>
    <string name="k">K</string>
    <string name="exit">Exit</string>
    <string name="first_names">First Name :</string>
    <string name="last_names">Last Name :</string>
    <string name="network_types">Network Type :</string>
    <string name="emails">Email :</string>
    <string name="enter_the_balance">Enter the balance</string>
    <string name="subscription_number_login">Subscription number</string>
    <string name="sign_up">Sign up</string>
    <string name="version_4_0">Version : 1.0</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="add_subscription_number">Add Subscription number</string>
    <string name="my_account_cap">My Account</string>
    <string name="add_and_manage_number">Add and manage number</string>
    <string name="my_plans_smal">My plans</string>
    <string name="products_cap">PRODUCTS</string>
    <string name="specials_cap">SPECIALS</string>
    <string name="add_subscription_number_s">Add Subscription Number</string>
    <string name="verify">Verify</string>
    <string name="add_cap">ADD</string>
    <string name="delete_subscription_number">Delete Subscription Number</string>
    <string name="customercare_telikom_com_pg"><u>https://www.telikom.com.pg/contact/</u></string>
    <string name="to_speak_to_a_customer_care_representative_press">To speak to a Customer Care Representative press</string>
    <string name="contact_us_s">Contact us</string>
    <string name="_1555">1555</string>
    <string name="or">OR</string>
    <string name="store_locator_s">Store Locator</string>
    <string name="authentication_otp">Authentication OTP</string>
    <string name="enter_otp_without_colon">Enter OTP</string>
    <string name="telikom_ai_assistant">Telikom AI assistant</string>
    <string name="ask_anything_about_your_account">Ask anything about your account...</string>
    <string name="voice_message">Voice Message</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
</resources>